--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,6 +1,11 @@
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+}
 ul{
     list-style-type: none;
 
@@ -53,4 +58,35 @@ li a{
 
 .side-link{
     display: block;
+}
+
+.task-container{
+    border-radius: 30px;
+    box-shadow: 0px 0px 3px -2px black;
+    padding: 10px;
+}
+
+.header-task{
+    border-radius: 0px 30px 30px 30px;
+}
+
+
+.btn-primary{
+    background-color: rgb(95, 38, 201) !important;
+    
+}
+
+.btn{
+    font-weight: bold !important;
+}
+
+
+.form-control{
+    background-color: white !important;
+}
+
+
+.bg-menunggu{
+    background-color: rgb(158, 158, 158) !important;
+    color: white !important;
 }
