--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,41 +1,41 @@
-*{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
-
-p{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif !important;
 }
-ul{
+ul {
     list-style-type: none;
-
-    
 }
 
-li a{
+li a {
     text-decoration: none;
 }
 
-.col a{
+.col a {
     text-decoration: none;
 }
 
-
-.sidebar{
+.sidebar {
     height: 100vh;
     background-color: rgb(255, 255, 255);
     width: 100vw;
 }
 
-.sidebar a{
+.sidebar a {
     color: black;
 }
 
-.sidebar .col:hover{
+.sidebar .col:hover {
     background-color: whitesmoke;
 }
 
-#petugas-list{
+#petugas-list {
     position: absolute;
     box-shadow: 0px 0px 5px -3px black;
     padding: 10px;
@@ -43,50 +43,72 @@ li a{
     background-color: white;
 }
 
-.bg-onhold{
+.bg-onhold {
     display: none;
     background-color: brown !important;
-    color: white!important;
+    color: white !important;
 }
 
-.bg-petugas{
+.bg-petugas {
     display: none;
     background-color: rgb(123, 218, 0) !important;
-    color: white!important;
+    color: white !important;
 }
 
-
-.side-link{
+.side-link {
     display: block;
 }
 
-.task-container{
+.task-container {
     border-radius: 30px;
     box-shadow: 0px 0px 3px -2px black;
     padding: 10px;
 }
 
-.header-task{
+.header-task {
     border-radius: 0px 30px 30px 30px;
 }
 
-
-.btn-primary{
+.btn-primary {
     background-color: rgb(95, 38, 201) !important;
-    
 }
 
-.btn{
+.btn {
     font-weight: bold !important;
 }
 
-
-.form-control{
+.form-control {
     background-color: white !important;
 }
 
-
-.bg-menunggu{
+.bg-menunggu {
     background-color: rgb(158, 158, 158) !important;
+    color: white !important;
+}
+
+.inbox-header {
+    background: linear-gradient(
+        90deg,
+        rgba(54, 1, 133, 1) 0%,
+        rgba(123, 0, 255, 1) 100%
+    );
+    color: white;
+}
+
+.nav-item .nav-link {
+    color: linear-gradient(
+        90deg,
+        rgba(54, 1, 133, 1) 0%,
+        rgba(123, 0, 255, 1) 100%
+    ) !important;
+}
+
+.header-task {
+    background: linear-gradient(
+        90deg,
+        rgba(91, 0, 226, 1) 0%,
+        rgba(123, 0, 255, 1) 100%
+    );
+
     color: white !important;
 }
