--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -69,8 +69,13 @@ li a {
     border-radius: 0px 30px 30px 30px;
 }
 
-.btn-primary {
+.btn-primary-lk{
     background-color: rgb(95, 38, 201) !important;
+    color: white !important;
+}
+
+.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    
 }
 
 .btn {
@@ -105,4 +110,15 @@ li a {
 
 .header-task {
     
+}
+
+.bg-selesai{
+    background-color: #4287f5 !important;
+    color: white !important;
+}
+
+
+.card-message-me{
+    background-color: rgba(123, 0, 255, 1) !important;
+    color: white !important;
 }
